<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Task Reminder</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="no_reminders">Toggle Silent Mode</string>
    <string name="title_activity_reminder_edit">ReminderEditActivity</string>

    <!-- activity_reminder_edit -->

    <string name="reminder_edit_title">Title</string>
    <string name="reminder_edit_body">Body</string>
    <string name="reminder_edit_date">Date</string>
    <string name="reminder_edit_date_edit">Edit Date</string>
    <string name="reminder_edit_time">Time</string>
    <string name="reminder_edit_time_edit">Edit Time</string>
    <string name="reminder_edit_confirm">Confirm</string>
    <string name="reminder_edit_alert_dialog_confirm">Are you sure you want to save these changes?</string>

    <!-- reminder_list_add -->

    <string name="reminder_list_add_reminder">Add Reminder</string>

    <!-- reminder_list_menu -->

    <string name="reminder_list_menu_delete">Delete</string>
    <string name="title_activity_date_picker_fragment">DatePickerFragment</string>
    <string name="title_activity_time_picker_fragment">TimePickerFragment</string>
    <string name="title_activity_alert_dialog_fragment">AlertDialogFragment</string>
    
    <!-- alert_dialogs -->
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    

</resources>