<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReminderEditActivity" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
			android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder_edit_title"/>

        <EditText
            android:id="@+id/reminder_edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder_edit_body" />
        <EditText
            android:id="@+id/reminder_edit_body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="5"
            android:scrollbars="vertical"
            android:gravity="top"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder_edit_date"/>

        <Button
            android:id="@+id/reminder_edit_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showEditDateDialog"
            android:text="@string/reminder_edit_date_edit" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder_edit_time"/>

        <Button
            android:id="@+id/reminder_edit_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showEditTimeDialog"
            android:text="@string/reminder_edit_time_edit" />

        <Button
            android:id="@+id/reminder_edit_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder_edit_confirm" />
"
	</LinearLayout>
</ScrollView>
